# rp2040-forth

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  compile.S  compile.h  connect.gdb  convert.S  dwelch-uart.S  forth.S  forthdefs.h  gdb.sh  gdbinit  helpers.S  io.S  junk  macros.h  macros.inc  mathwords.h  nc.cmd  openocd.sh  output.S  output.h  platformio.ini  startup_stm32f103xb.S  strings.S  terminal.S  terminal.h  upload.sh
bugs/: 001-greater-than-borrows-lt-label.md  002-recurse-hard-crash.md  003-type-wrong-signature.md  004-wordbuf2-shared-between-word-and-dot.md  005-myatoi-rejects-uppercase-hex.md  006-depth-off-by-one.md  007-dot-s-wrong-output.md  008-pushwordaddress-uses-offset-exec-not-offset-name.md  009-dot-cannot-print-intmin.md  010-test-2.3-swap-expectation-wrong.md  011-test-5.2-hex-output-expectation-wrong.md  012-test-10.3-see-format-mismatch.md  013-divmod-divide-by-zero.md  014-open-file-word-not-executed.md  015-open-file-missing-path-no-error.md  016-close-file-word-not-executed.md  017-file-size-word-not-executed.md  018-read-file-word-not-executed.md
demos/: Towers-build.txt
docs/: improvements.md  sprint-plan.md  storage.md  test-suite.md  usb-serial.md
forth/: CMakeLists.txt  forth.S  junk  terminal.S
removed/: dwelch-uart.S
scripts/: gendocs.sh  jlink_nucleof103rb.sh  macroexpansion.sh  serial.sh  stlink.sh  stlink_nucleof103rb.sh
src/: compile.h  convert.S  filewords.h  forth.S  forthdefs.h  helpers.S  macros.h  main.cpp  mathwords.h  output.h  strings.S  terminal.h  themacros.h
(+29 files in other folders)
